force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Current_NAV__c.field-meta.xml
<CustomField>
    <fullName>Current_NAV__c</fullName>
    <label>Current NAV</label>
    <description>The LP's current capital account Net Asset Value (residual/unrealized value).</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>