force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Total_Called_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Called_Capital__c</fullName>
    <label>Total Called Capital</label>
    <description>Cumulative cash drawn down (paid-in capital) for this commitment.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>