force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Total_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributions__c</fullName>
    <label>Total Distributions</label>
    <description>Cumulative cash returned to the LP (exit proceeds and dividends).</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>